Fix responsiveness on mobile display, remove margin in @media for .part-list-wrapper

--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,6 @@ body {
   display: flex;
   width: 100%;
   margin: auto;
-  justify-content: space-around;
 }
 
 .avatar-container {
@@ -177,7 +176,8 @@ body {
   }
 
   .part-list-wrapper {
-    margin-top: 0;
+    margin: 0;
+
     min-width: 90%;
   }
   .part-list-items {
